# genshin.py

./: .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biweekly_release.py  dev-requirements.txt  genshinapi.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  renovate.json  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: biweek_release.yml  biweekly-release.yml  checks.yml  docs.yml  mkdocs.yml  publish.yml  release.yml  test.yml
authentication/: index.html
battle_chronicle/: index.html
caching/: index.html
calculator/: index.html
cli/: index.html
configuration/: index.html
credits/: index.html
daily_rewards/: index.html
debugging/: index.html
diary/: index.html
docs/: api.md  authentication.md  battle_chronicle.md  caching.md  calculator.md  chinese.md  cli.md  configuration.md  credits.md  daily_rewards.md  debugging.md  diary.md  doc.md  genshin_api.md  genshinapi.md  hoyolab.md  hsr_characters.md  hsr_lineup.md  index.md  langs.md  lineup.md  multicookie.md  transactions.md  wish_history.md
extra/: app.py  honkai_example.py
genshin/: __init__.py  __main__.py  client.py  constants.py  errors.py  paginator.py  types.py  utils.py
genshin-dev/: README.md  docs-requirements.txt  lint-requirements.txt  pytest-requirements.txt  reformat-requirements.txt  setup.py  typecheck-requirements.txt
genshin/client/: __init__.py  adapter.py  base.py  cache.py  client.py  clients.py  compatibility.py  manager.py  ratelimit.py  routes.py
genshin/client/components/: __init__.py  base.py  client.py  daily.py  diary.py  gacha.py  hoyolab.py  hsr_lineup.py  lineup.py  teapot.py  transaction.py  wiki.py  wish.py
genshin/client/components/auth/: __init__.py  client.py  server.py
genshin/client/components/calculator/: __init__.py  calculator.py  client.py
genshin/client/components/chronicle/: __init__.py  base.py  client.py  genshin.py  honkai.py  starrail.py  zzz.py
genshin/client/components/geetest/: __init__.py  client.py  server.py
genshin/client/components/genshin/: __init__.py  chronicle.py
genshin/client/genshin/: __init__.py  base.py  chinese.py  client.py  overseas.py
genshin/client/honkai/: __init__.py  base.py  overseas.py
genshin/client/manager/: __init__.py  cookie.py  managers.py
genshin/models/: __init__.py  abyss.py  activities.py  base.py  calculator.py  character.py  daily.py  diary.py  honkai_base.py  honkai_character.py  honkai_hoyolab.py  honkai_permanent_modes.py  honkai_stats.py  hoyolab.py  intermap.py  map.py  model.py  notes.py  record.py  stats.py  transaction.py  wish.py
genshin/models/auth/: __init__.py  cookie.py  geetest.py  qrcode.py  responses.py  verification.py
genshin/models/genshin/: __init__.py  abyss.py  activities.py  base.py  calculator.py  character.py  constants.py  daily.py  diary.py  gacha.py  intermap.py  lineup.py  notes.py  record.py  stats.py  teapot.py  transaction.py  wiki.py  wish.py
genshin/models/genshin/chronicle/: __init__.py  abyss.py  act_calendar.py  activities.py  char_master.py  characters.py  hard_challenge.py  img_theater.py  notes.py  stats.py  tcg.py
genshin/models/honkai/: __init__.py  base.py  battlesuit.py  character.py  constants.py  permanent_modes.py  record.py  stats.py
genshin/models/honkai/chronicle/: __init__.py  battlesuits.py  modes.py  notes.py  stats.py
genshin/models/hoyolab/: __init__.py  accompany.py  announcements.py  genshin.py  honkai.py  mimo.py  private.py  record.py  reply.py  web_event.py
genshin/models/miyoushe/: __init__.py  cookie.py  geetest.py  qrcode.py
genshin/models/starrail/: __init__.py  character.py  rpgsimulator.py
genshin/models/starrail/chronicle/: __init__.py  base.py  challenge.py  characters.py  events.py  notes.py  rogue.py  stats.py
genshin/models/zzz/: __init__.py  character.py
genshin/models/zzz/chronicle/: __init__.py  abyss.py  challenge.py  month_info.py  notes.py  stats.py
genshin/paginators/: __init__.py  api.py  base.py  genshin.py  honkai.py
genshin/resources/: gt.js  index.html
genshin/utility/: __init__.py  auth.py  concurrency.py  deprecation.py  ds.py  extdb.py  fs.py  geetest.py  logfile.py  uid.py
genshin/utility/genshin/: __init__.py  genshin.py  logfile.py  uid.py
genshin/utility/honkai/: __init__.py  uid.py
genshin/utils/: __init__.py  cache.py  genshin.py  honkai.py  iterators.py  logfile.py  misc.py  pydantic.py
hoyolab/: index.html
hsr_characters/: index.html
hsr_lineup/: index.html
lineup/: index.html
pdoc/genshin/: constants.html  errors.html  index.html  types.html
pdoc/genshin/client/: cache.html  clients.html  compatibility.html  index.html  manager.html  ratelimit.html  routes.html
pdoc/genshin/client/components/: base.html  daily.html  diary.html  gacha.html  hoyolab.html  hsr_lineup.html  index.html  lineup.html  teapot.html  transaction.html  wiki.html  wish.html
pdoc/genshin/client/manager/: cookie.html  index.html  managers.html
pdoc/genshin/models/: index.html  model.html
pdoc/genshin/models/auth/: cookie.html  geetest.html  index.html  qrcode.html  responses.html  verification.html
pdoc/genshin/models/zzz/: index.html  (+1 more)
pdoc/genshin/paginators/: api.html  base.html  index.html
pdoc/genshin/utility/: auth.html  concurrency.html  deprecation.html  ds.html  extdb.html  fs.html  geetest.html  index.html  logfile.html  uid.html
search/: search_index.json
tests/: conftest.py  test_cache.py  test_calculator.py  test_chinese.py  test_daily.py  test_diary.py  test_hoyolab.py  test_models.py  test_multicookie.py  test_mutlicookie.py  test_paginators.py  test_record.py  test_transactions.py  test_utils.py  test_wish.py
tests/client/components/: test_calculator.py  test_daily.py  test_diary.py  test_genshin_chronicle.py  test_honkai_chronicle.py  test_hoyolab.py  test_hsr_chronicle.py  test_hsr_lineup.py  test_lineup.py  test_teapot.py  test_transaction.py  test_wiki.py  test_wish.py  test_zzz_chronicle.py
tests/models/: test_model.py
transactions/: index.html
wish_history/: index.html
(+80 files in other folders)
